--- a/css/mercor-modal.css
+++ b/css/mercor-modal.css
@@ -52,7 +52,6 @@ SOFTWARE.
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	margin-bottom:10px;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -96,7 +95,7 @@ SOFTWARE.
 
 #mercor-modal .mercor-body{
 	font-size: 13px;
-	background-color: black;
+	background-color: white;
 	overflow: hidden;
 	display: block;
     position:absolute;
